--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,9 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster&family=Roboto:ital,wght@0,100..900;1,100..900&family=Rubik+Mono+One&family=Story+Script&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wdth,wght@0,75,100..900;1,75,100..900&display=swap');
 body {
   background: linear-gradient(135deg, #f8f4ff 0%, #f0f8ff 100%);
   margin: 0;
-  font-family: 'Montserrat', Arial, sans-serif;
+  font-family: "Roboto", sans-serif;
+  font-optical-sizing: auto;
   display: block;
   color: #2d1b69;
 }
@@ -92,8 +93,6 @@ body {
   transition: all 0.3s ease;
   position: relative;
   padding: 5px 8px;
-  font-family: "Rubik Mono One", monospace;
-  font-weight: 400;
   font-style: normal;
   border-radius: 8px;
 }
